Add a CSS rule that removes min-with on progress bar elements. Fixes #10

--- a/tests-cucumber-ui/app/styles/main.css
+++ b/tests-cucumber-ui/app/styles/main.css
@@ -1,6 +1,17 @@
+/**
+ * Brower happy
+ */
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
   color: #000;
   padding: 0.2em 0;
+}
+
+
+/**
+ * Scenario progress bar styling
+ */
+.progress.scenario-progress .progress-bar {
+  min-width: 0 !important;
 }
