--- a/tests-cucumber-ui/app/views/tc-scenario-progress.html
+++ b/tests-cucumber-ui/app/views/tc-scenario-progress.html
@@ -3,7 +3,7 @@
      popover-trigger="mouseenter"
      popover-title="Statistiques détaillées">
 
-  <uib-progress>
+  <uib-progress ng-class="'scenario-progress'">
 
     <uib-bar ng-if="$ctrl.hasStatus('PASSED')"
              value="$ctrl.getStatusPercentRate('PASSED')"
