Use a link to view tags

--- a/tests-cucumber-ui/app/views/scenario.html
+++ b/tests-cucumber-ui/app/views/scenario.html
@@ -175,7 +175,7 @@
   <p ng-if="filteredComments.length < ctrl.comments.length">
     <i>
       Les commentaires les plus anciens ne sont pas affichés.
-      <a href="" ng-click="ctrl.limitMaxDisplayedComments = false">
+      <a href ng-click="ctrl.limitMaxDisplayedComments = false">
         Cliquez ici pour afficher tous les commentaires.
       </a>
     </i>
