--- a/tests-cucumber-ui/app/views/test-run.html
+++ b/tests-cucumber-ui/app/views/test-run.html
@@ -33,10 +33,10 @@
     </div>
     <div class="btn-group" role="group">
 
-      <button ng-click="ctrl.viewTags()" class="btn btn-default">
+      <a ng-href="#/test-runs/{{ ctrl.testRun.id }}/tags" class="btn btn-default">
         <span class="glyphicon glyphicon-tags" aria-hidden="true"></span>
         Statistiques par tag
-      </button>
+      </a>
 
     </div>
     <div class="btn-group" role="group">
