--- a/tests-cucumber-ui/app/views/test-run-diff.html
+++ b/tests-cucumber-ui/app/views/test-run-diff.html
@@ -39,12 +39,13 @@
       </tr>
       </thead>
       <tbody>
-      <tr ng-repeat="testRun in ctrl.latestTestRuns | filter:ctrl.isNotBaseTestRun track by testRun.id">
+      <tr ng-repeat="testRun in ctrl.latestTestRuns track by testRun.id">
         <td>
           <span class="label label-default">{{ testRun.type }}</span>
         </td>
-        <td>
-          <a href ng-click="ctrl.selectOtherTestRun(testRun.id)">Tir du {{ testRun.date | niceDate }}</a>
+        <td ng-switch on="ctrl.isBaseTestRun(testRun)">
+          <a href ng-switch-when="false" ng-click="ctrl.selectOtherTestRun(testRun.id)">Tir du {{ testRun.date | niceDate }}</a>
+          <i ng-switch-default>Tir du {{ testRun.date | niceDate }}</i>
         </td>
       </tr>
       </tbody>
