Bettter names in UI diff

--- a/tests-cucumber-ui/app/views/test-run-diff.html
+++ b/tests-cucumber-ui/app/views/test-run-diff.html
@@ -69,7 +69,7 @@
 
     <h2>Différences constatées</h2>
 
-    <h3>Nouveaux scénarii</h3>
+    <h3>Scénarii ajoutés</h3>
 
     <table class="table table-striped table-bordered">
       <thead>
@@ -93,7 +93,7 @@
       <tfoot ng-if="ctrl.diff.newScenarii.length === 0">
       <tr>
         <td class="warning" colspan="2" style="text-align: center">
-          Aucun nouveau scénario
+          Aucun scénario ajouté
         </td>
       </tr>
       </tfoot>
@@ -135,8 +135,8 @@
       <thead>
       <tr>
         <th class="col-md-10">Scénario</th>
-        <th class="col-md-1">Ancien&nbsp;statut</th>
-        <th class="col-md-1">Nouveau&nbsp;statut</th>
+        <th class="col-md-1">Statut&nbsp;précédent</th>
+        <th class="col-md-1">Statut&nbsp;suivant</th>
       </tr>
       </thead>
       <tbody>
