--- a/tests-cucumber-ui/app/views/scenario.html
+++ b/tests-cucumber-ui/app/views/scenario.html
@@ -64,6 +64,21 @@
     </div>
     <div class="btn-group" role="group">
 
+      <button type="button" class="btn btn-default" ng-click="ctrl.changeReviewState(!ctrl.scenario.reviewed)"
+              ng-switch on="ctrl.scenario.reviewed">
+        <span ng-switch-when="true">
+          <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
+          Marquer comme non analysé
+        </span>
+        <span ng-switch-default>
+          <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+          Marquer comme analysé
+        </span>
+      </button>
+
+    </div>
+    <div class="btn-group" role="group">
+
       <button ng-click="ctrl.delete()" class="btn btn-danger btn-default">
         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
         Supprimer
