--- a/tests-cucumber-ui/app/views/test-runs.html
+++ b/tests-cucumber-ui/app/views/test-runs.html
@@ -25,12 +25,13 @@
     <thead>
     <tr>
       <th class="col-md-1">Type</th>
-      <th class="col-md-6">Tir de test</th>
+      <th class="col-md-5">Tir de test</th>
       <th class="col-md-1">Total</th>
       <th class="col-md-1">Succès</th>
       <th class="col-md-1">Échecs</th>
       <th class="col-md-1">En attente</th>
       <th class="col-md-1">Non joués</th>
+      <th class="col-md-1">Analysés</th>
     </tr>
     </thead>
     <tbody>
@@ -46,6 +47,7 @@
       <td><span class="badge">{{ testRun.stats.statsByStatus['FAILED'] }}</span></td>
       <td><span class="badge">{{ testRun.stats.statsByStatus['PENDING'] }}</span></td>
       <td><span class="badge">{{ testRun.stats.statsByStatus['NOT_RUN'] }}</span></td>
+      <td><span class="badge">{{ testRun.stats.reviewedCount }}</span></td>
     </tr>
     </tbody>
   </table>
