--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -87,8 +87,9 @@
   <table class="table table-striped table-bordered">
     <thead>
     <tr>
-      <th class="col-md-11">Scénario</th>
+      <th class="col-md-10">Scénario</th>
       <th class="col-md-1">Statut</th>
+      <th class="col-md-1">Analysé</th>
     </tr>
     </thead>
     <tbody>
@@ -101,6 +102,10 @@
       </td>
       <td>
         <tc-status status="scenario.status"></tc-status>
+      </td>
+      <td>
+        <span class="label label-success" ng-if="scenario.reviewed">Oui</span>
+        <span class="label label-default" ng-if="!scenario.reviewed">Non</span>
       </td>
     </tr>
     </tbody>
@@ -136,13 +141,14 @@
     <thead>
     <tr>
       <th class="col-md-1">Type</th>
-      <th class="col-md-5">Tir</th>
+      <th class="col-md-4">Tir</th>
       <th class="col-md-1">Statut</th>
       <th class="col-md-1">Total</th>
       <th class="col-md-1">Succès</th>
       <th class="col-md-1">Échecs</th>
       <th class="col-md-1">En attente</th>
       <th class="col-md-1">Non joués</th>
+      <th class="col-md-1">Analysés</th>
     </tr>
     </thead>
     <tbody>
@@ -164,6 +170,7 @@
       <td><span class="badge">{{ feature.stats.statsByStatus['FAILED'] }}</span></td>
       <td><span class="badge">{{ feature.stats.statsByStatus['PENDING'] }}</span></td>
       <td><span class="badge">{{ feature.stats.statsByStatus['NOT_RUN'] }}</span></td>
+      <td><span class="badge">{{ feature.stats.reviewedCount }}</span></td>
     </tr>
     </tbody>
   </table>
