--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -70,7 +70,7 @@
     <hr>
 
     <p>
-      <tc-line-breaks content="ctrl.feature.description"></tc-line-breaks>
+      <tc-line-breaks display-feature="false" content="ctrl.feature.description"></tc-line-breaks>
     </p>
 
   </div>
@@ -81,45 +81,12 @@
 
   <h2>Scénarii</h2>
 
-  <tc-scenario-filters filters="ctrl.scenarioFilters" on-update="ctrl.updateScenarioStoredFilters(filters)">
-  </tc-scenario-filters>
 
-  <table class="table table-striped table-bordered">
-    <thead>
-    <tr>
-      <th class="col-md-10">Scénario</th>
-      <th class="col-md-1">Statut</th>
-      <th class="col-md-1">Analysé</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr
-      ng-repeat="scenario in ctrl.feature.scenarii | filter:ctrl.isScenarioDisplayable as filteredScenarii track by scenario.id">
-      <td>
-        <a ng-href="#/scenarii/{{ scenario.id }}">
-          <tc-element-info info="scenario.info"></tc-element-info>
-        </a>
-      </td>
-      <td>
-        <tc-status status="scenario.status"></tc-status>
-      </td>
-      <td>
-        <span class="label label-success" ng-if="scenario.reviewed">Oui</span>
-        <span class="label label-default" ng-if="!scenario.reviewed">Non</span>
-      </td>
-    </tr>
-    </tbody>
-    <tfoot ng-if="filteredScenarii.length != ctrl.feature.scenarii.length">
-    <tr>
-      <td class="warning" colspan="3" style="text-align: center">
-        Attention :
-        <ng-pluralize count="ctrl.feature.scenarii.length - filteredScenarii.length"
-                      when="{ 'one': 'un scénario masqué', 'other': '{} scénarii masqués'}">
-        </ng-pluralize>
-      </td>
-    </tr>
-    </tfoot>
-  </table>
+  <tc-scenario-list
+    scenarii="ctrl.feature.scenarii"
+    filters="ctrl.scenarioFilters"
+    on-filter-update="ctrl.updateScenarioStoredFilters(filters)">
+  </tc-scenario-list>
 
   <!-- History -->
 
