--- a/tests-cucumber-ui/app/views/test-run-tag.html
+++ b/tests-cucumber-ui/app/views/test-run-tag.html
@@ -119,50 +119,10 @@
 
   <h2>Scénarii</h2>
 
-  <tc-scenario-filters filters="ctrl.scenarioFilters" on-update="ctrl.updateScenarioStoredFilters(filters)">
-  </tc-scenario-filters>
-
-  <table class="table table-striped table-bordered">
-    <thead>
-    <tr>
-      <th class="col-md-4">Fonctionnalité</th>
-      <th class="col-md-6">Scénario</th>
-      <th class="col-md-1">Statut</th>
-      <th class="col-md-1">Analysé</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr
-      ng-repeat="scenario in ctrl.scenarii | filter:ctrl.isScenarioInSelectedFeature | filter:ctrl.isScenarioStatusSelected as filteredScenarii track by scenario.id">
-      <td>
-        <a ng-href="#/features/{{ scenario.feature.id }}">
-          {{ scenario.feature.info.name }}
-        </a>
-      </td>
-      <td>
-        <a ng-href="#/scenarii/{{ scenario.id }}">
-          <tc-element-info info="scenario.info"></tc-element-info>
-        </a>
-      </td>
-      <td>
-        <tc-status status="scenario.status"></tc-status>
-      </td>
-      <td>
-        <span class="label label-success" ng-if="scenario.reviewed">Oui</span>
-        <span class="label label-default" ng-if="!scenario.reviewed">Non</span>
-      </td>
-    </tr>
-    </tbody>
-    <tfoot ng-if="filteredScenarii.length != ctrl.scenarii.length">
-    <tr>
-      <td class="warning" colspan="4" style="text-align: center">
-        Attention :
-        <ng-pluralize count="ctrl.scenarii.length - filteredScenarii.length"
-                      when="{ 'one': 'un scénario masqué', 'other': '{} scénarii masqués'}">
-        </ng-pluralize>
-      </td>
-    </tr>
-    </tfoot>
-  </table>
+  <tc-scenario-list
+    display-feature="true" scenarii="ctrl.scenarii"
+    filters="ctrl.scenarioFilters"
+    on-filter-update="ctrl.updateScenarioStoredFilters(filters)">
+  </tc-scenario-list>
 
 </div>
