--- a/tests-cucumber-ui/app/views/test-run-tag.html
+++ b/tests-cucumber-ui/app/views/test-run-tag.html
@@ -69,49 +69,11 @@
 
   <h2>Fonctionnalités</h2>
 
-  <table class="table table-striped table-bordered">
-    <thead>
-    <tr>
-      <th class="col-md-1">Groupe</th>
-      <th class="col-md-4">Fonctionnalité</th>
-      <th class="col-md-1">Statut</th>
-      <th class="col-md-1">Total</th>
-      <th class="col-md-1">Succès</th>
-      <th class="col-md-1">Échecs</th>
-      <th class="col-md-1">En attente</th>
-      <th class="col-md-1">Non joués</th>
-      <th class="col-md-1">Analysés</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr
-      ng-repeat="feature in ctrl.features | filter:ctrl.isFeatureDisplayable as filteredFeatures track by feature.id">
-      <td>{{ feature.group }}</td>
-      <td>
-        <a ng-href="#/features/{{ feature.id }}" ng-click="ctrl.selectFeature(feature); $event.preventDefault(); $event.stopPropagation();">
-          {{ feature.info.name }}
-        </a>
-      </td>
-      <td>
-        <tc-status status="feature.status"></tc-status>
-      </td>
-      <td><span class="badge">{{ feature.stats.count }}</span></td>
-      <td><span class="badge">{{ feature.stats.statsByStatus['PASSED'] }}</span></td>
-      <td><span class="badge">{{ feature.stats.statsByStatus['FAILED'] }}</span></td>
-      <td><span class="badge">{{ feature.stats.statsByStatus['PENDING'] }}</span></td>
-      <td><span class="badge">{{ feature.stats.statsByStatus['NOT_RUN'] }}</span></td>
-      <td><span class="badge">{{ feature.stats.reviewedCount }}</span></td>
-    </tr>
-    </tbody>
-    <tfoot ng-if="ctrl.features.length != filteredFeatures.length">
-    <tr>
-      <td class="warning" colspan="12" style="text-align: center">
-        Attention : certains fonctionnalités sont masquées.
-        <a href ng-click="ctrl.clearSelectedFeature()">Cliquez ici pour supprimer le filtre</a>
-      </td>
-    </tr>
-    </tfoot>
-  </table>
+  <tc-feature-list
+    features="ctrl.features"
+    filters="ctrl.featureFilters"
+    on-filter-update="ctrl.updateStoredFilters(filters)">
+  </tc-feature-list>
 
   <!-- Scénarii -->
 
