--- a/tests-cucumber-ui/app/views/test-run.html
+++ b/tests-cucumber-ui/app/views/test-run.html
@@ -71,73 +71,12 @@
 
   <h2>Fonctionnalités</h2>
 
-  <div class="form" style="margin-bottom: 10px">
-    <div class="form-group">
-      <b>Filtrer par statut :</b>
-      <label class="checkbox-inline">
-        <input type="checkbox" ng-model="ctrl.filters.passed" ng-change="ctrl.updateStoredFilters()">
-        Succès
-      </label>
-      <label class="checkbox-inline">
-        <input type="checkbox" ng-model="ctrl.filters.failed" ng-change="ctrl.updateStoredFilters()">
-        Échecs
-      </label>
-      <label class="checkbox-inline">
-        <input type="checkbox" ng-model="ctrl.filters.partial" ng-change="ctrl.updateStoredFilters()">
-        Partiels
-      </label>
-      <label class="checkbox-inline">
-        <input type="checkbox" ng-model="ctrl.filters.notRun" ng-change="ctrl.updateStoredFilters()">
-        Non joués
-      </label>
-    </div>
-  </div>
+  <tc-feature-list
+    features="ctrl.testRun.features"
+    filters="ctrl.filters"
+    on-filter-update="ctrl.updateStoredFilters(filters)">
+  </tc-feature-list>
 
-  <table class="table table-striped table-bordered">
-    <thead>
-    <tr>
-      <th class="col-md-1">Groupe</th>
-      <th class="col-md-4">Fonctionnalité</th>
-      <th class="col-md-1">Statut</th>
-      <th class="col-md-1">Total</th>
-      <th class="col-md-1">Succès</th>
-      <th class="col-md-1">Échecs</th>
-      <th class="col-md-1">En attente</th>
-      <th class="col-md-1">Non joués</th>
-      <th class="col-md-1">Analysés</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr
-      ng-repeat="feature in ctrl.testRun.features | filter:ctrl.isFeatureDisplayable as filteredFeatures track by feature.id">
-      <td>{{ feature.group }}</td>
-      <td>
-        <a ng-href="#/features/{{ feature.id }}">
-          {{ feature.info.name }}
-        </a>
-      </td>
-      <td>
-        <tc-status status="feature.status"></tc-status>
-      </td>
-      <td><span class="badge">{{ feature.stats.count }}</span></td>
-      <td><span class="badge">{{ feature.stats.statsByStatus['PASSED'] }}</span></td>
-      <td><span class="badge">{{ feature.stats.statsByStatus['FAILED'] }}</span></td>
-      <td><span class="badge">{{ feature.stats.statsByStatus['PENDING'] }}</span></td>
-      <td><span class="badge">{{ feature.stats.statsByStatus['NOT_RUN'] }}</span></td>
-      <td><span class="badge">{{ feature.stats.reviewedCount }}</span></td>
-    </tr>
-    </tbody>
-    <tfoot ng-if="filteredFeatures.length != ctrl.testRun.features.length">
-    <tr>
-      <td class="warning" colspan="12" style="text-align: center">
-        Attention :
-        <ng-pluralize count="ctrl.testRun.features.length - filteredFeatures.length"
-                      when="{ 'one': 'une fonctionnalité masquée', 'other': '{} fonctionnalités masquées'}">
-        </ng-pluralize>
-      </td>
-    </tr>
-    </tfoot>
-  </table>
 
   <!-- History -->
 
