--- a/tests-cucumber-ui/app/views/tc-scenario-list.html
+++ b/tests-cucumber-ui/app/views/tc-scenario-list.html
@@ -3,7 +3,7 @@
   <div class="form" style="margin-bottom: 10px">
 
     <div class="form-group">
-      <b>Filtrer par statut :</b>
+      <b>Filtrer les scénarii :</b>
       <label class="checkbox-inline">
         <input type="checkbox" ng-model="$ctrl.filters.passed" ng-change="$ctrl.onFilterChange()"> Succès
       </label>
@@ -15,6 +15,9 @@
       </label>
       <label class="checkbox-inline">
         <input type="checkbox" ng-model="$ctrl.filters.notRun" ng-change="$ctrl.onFilterChange()"> Non joués
+      </label>
+      <label class="checkbox-inline">
+        <input type="checkbox" ng-model="$ctrl.filters.reviewed" ng-change="$ctrl.onFilterChange()"> Analysés
       </label>
     </div>
 
