--- a/tests-cucumber-ui/app/views/tc-feature-list.html
+++ b/tests-cucumber-ui/app/views/tc-feature-list.html
@@ -13,15 +13,15 @@
       </label>
       <label class="checkbox-inline">
         <input type="checkbox" ng-model="$ctrl.filters.partial" ng-change="$ctrl.onFilterChange()">
-        Partiels
+        Partielles
       </label>
       <label class="checkbox-inline">
         <input type="checkbox" ng-model="$ctrl.filters.notRun" ng-change="$ctrl.onFilterChange()">
-        Non joués
+        Non jouées
       </label>
       <label class="checkbox-inline">
         <input type="checkbox" ng-model="$ctrl.filters.reviewed" ng-change="$ctrl.onFilterChange()">
-        Analysés
+        Analysées
       </label>
     </div>
   </div>
