Use brower storage from components

--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -82,10 +82,7 @@
   <h2>Scénarii</h2>
 
 
-  <tc-scenario-list
-    scenarii="ctrl.feature.scenarii"
-    filters="ctrl.scenarioFilters"
-    on-filter-update="ctrl.updateScenarioStoredFilters(filters)">
+  <tc-scenario-list scenarii="ctrl.feature.scenarii">
   </tc-scenario-list>
 
   <!-- History -->
