--- a/tests-cucumber-ui/app/views/test-run-tag.html
+++ b/tests-cucumber-ui/app/views/test-run-tag.html
@@ -71,8 +71,6 @@
 
   <tc-feature-list
     features="ctrl.features"
-    filters="ctrl.featureFilters"
-    on-filter-update="ctrl.updateStoredFilters(filters)"
     on-features-filtered="ctrl.updateFeatureIds(featureIds)">
   </tc-feature-list>
 
@@ -83,9 +81,8 @@
   <h2>Scénarii</h2>
 
   <tc-scenario-list
-    display-feature="true" scenarii="ctrl.scenarii"
-    filters="ctrl.scenarioFilters"
-    on-filter-update="ctrl.updateScenarioStoredFilters(filters)"
+    display-feature="true"
+    scenarii="ctrl.scenarii"
     extra-filter="ctrl.isFeatureIdSelected">
   </tc-scenario-list>
 
