--- a/tests-cucumber-ui/app/views/test-run.html
+++ b/tests-cucumber-ui/app/views/test-run.html
@@ -71,10 +71,7 @@
 
   <h2>Fonctionnalités</h2>
 
-  <tc-feature-list
-    features="ctrl.testRun.features"
-    filters="ctrl.filters"
-    on-filter-update="ctrl.updateStoredFilters(filters)">
+  <tc-feature-list features="ctrl.testRun.features">
   </tc-feature-list>
 
 
