--- a/tests-cucumber-ui/app/views/scenario.html
+++ b/tests-cucumber-ui/app/views/scenario.html
@@ -199,7 +199,7 @@
 
       <p>
         <button type="button" class="btn btn-default btn-xs" ng-click="comment.edit = true">
-          <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
           Modifier
         </button>
         <button type="button" class="btn btn-danger btn-xs" ng-click="ctrl.deleteComment(comment)">
