Auto-resize comment form

--- a/tests-cucumber-ui/app/views/scenario.html
+++ b/tests-cucumber-ui/app/views/scenario.html
@@ -217,7 +217,8 @@
 
         <div class="form-group">
           <textarea ng-model="comment.content" class="form-control" rows="3"
-                    placeholder="Entrez votre commentaire">
+                    placeholder="Entrez votre commentaire"
+                    msd-elastic>
           </textarea>
         </div>
 
@@ -251,6 +252,7 @@
 
     <div class="form-group">
       <textarea ng-model="addCommentCtrl.content" class="form-control" rows="3"
+                msd-elastic
                 placeholder="Entrez votre commentaire">
       </textarea>
     </div>
