--- a/tests-cucumber-ui/app/views/scenario.html
+++ b/tests-cucumber-ui/app/views/scenario.html
@@ -179,89 +179,93 @@
 
   <h2>Commentaires</h2>
 
-  <div
-    ng-repeat="comment in ctrl.comments | filter:ctrl.limitDisplayedComments as filteredComments track by comment.id">
+  <div ng-controller="ScenarioCommentsCtrl as commentsCtrl">
 
-    <h4>
-      Le {{ comment.date | niceDate }}
-      <small ng-if="comment.testRun">
-        (tir du <a ng-href="#/scenarii/{{ comment | commentReference:'SCENARIO_ID' }}">{{ comment.testRun.date |
-        niceDate }}</a>)
-      </small>
-    </h4>
+    <div
+      ng-repeat="comment in commentsCtrl.comments | filter:commentsCtrl.limitDisplayedComments as filteredComments track by comment.id">
 
-    <!-- Comment display -->
-    <div ng-if="!comment.edit">
+      <h4>
+        Le {{ comment.date | niceDate }}
+        <small ng-if="comment.testRun">
+          (tir du <a ng-href="#/scenarii/{{ comment | commentReference:'SCENARIO_ID' }}">{{ comment.testRun.date |
+          niceDate }}</a>)
+        </small>
+      </h4>
 
-      <p ng-class="ctrl.isCommentFromSameTestRun(comment) || 'text-muted'">
-        <tc-line-breaks content="comment.content"></tc-line-breaks>
-      </p>
+      <!-- Comment display -->
+      <div ng-if="!comment.edit">
 
-      <p>
-        <button type="button" class="btn btn-default btn-xs" ng-click="comment.edit = true">
-          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-          Modifier
-        </button>
-        <button type="button" class="btn btn-danger btn-xs" ng-click="ctrl.deleteComment(comment)">
-          <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-          Supprimer
-        </button>
-      </p>
+        <p ng-class="commentsCtrl.isCommentFromSameTestRun(comment) || 'text-muted'">
+          <tc-line-breaks content="comment.content"></tc-line-breaks>
+        </p>
 
-    </div>
+        <p>
+          <button type="button" class="btn btn-default btn-xs" ng-click="comment.edit = true">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            Modifier
+          </button>
+          <button type="button" class="btn btn-danger btn-xs" ng-click="commentsCtrl.deleteComment(comment)">
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+            Supprimer
+          </button>
+        </p>
 
-    <!-- Comment editing -->
-    <div ng-if="comment.edit">
+      </div>
 
-      <form ng-controller="EditCommentCtrl as editCommentCtrl">
+      <!-- Comment editing -->
+      <div ng-if="comment.edit">
 
-        <div class="form-group">
+        <form ng-controller="EditCommentCtrl as editCommentCtrl">
+
+          <div class="form-group">
           <textarea ng-model="comment.content" class="form-control" rows="3"
                     placeholder="Entrez votre commentaire"
                     msd-elastic>
           </textarea>
-        </div>
+          </div>
 
-        <p>
-          <button type="button" class="btn btn-default btn-xs" ng-click="comment.edit = false">
-            Annuler
-          </button>
-          <button type="button" class="btn btn-primary btn-xs" ng-click="editCommentCtrl.save(comment)">
-            Enregistrer
-          </button>
-        </p>
+          <p>
+            <button type="button" class="btn btn-default btn-xs" ng-click="comment.edit = false">
+              Annuler
+            </button>
+            <button type="button" class="btn btn-primary btn-xs" ng-click="editCommentCtrl.save(comment)">
+              Enregistrer
+            </button>
+          </p>
 
-      </form>
+        </form>
+
+      </div>
 
     </div>
 
-  </div>
+    <p ng-if="filteredComments.length < commentsCtrl.comments.length">
+      <i>
+        Les commentaires les plus anciens ne sont pas affichés.
+        <a href ng-click="commentsCtrl.limitMaxDisplayedComments = false">
+          Cliquez ici pour afficher tous les commentaires.
+        </a>
+      </i>
+    </p>
 
-  <p ng-if="filteredComments.length < ctrl.comments.length">
-    <i>
-      Les commentaires les plus anciens ne sont pas affichés.
-      <a href ng-click="ctrl.limitMaxDisplayedComments = false">
-        Cliquez ici pour afficher tous les commentaires.
-      </a>
-    </i>
-  </p>
+    <h4>Ajouter un nouveau commentaire</h4>
 
-  <h4>Ajouter un nouveau commentaire</h4>
+    <form ng-controller="AddCommentCtrl as addCommentCtrl">
 
-  <form ng-controller="AddCommentCtrl as addCommentCtrl">
-
-    <div class="form-group">
+      <div class="form-group">
       <textarea ng-model="addCommentCtrl.content" class="form-control" rows="3"
                 msd-elastic
                 placeholder="Entrez votre commentaire">
       </textarea>
-    </div>
+      </div>
 
-    <button ng-click="addCommentCtrl.addComment()" type="submit" class="btn btn-primary">
-      Ajouter le commentaire
-    </button>
+      <button ng-click="addCommentCtrl.addComment()" type="submit" class="btn btn-primary">
+        Ajouter le commentaire
+      </button>
 
-  </form>
+    </form>
+
+  </div>
 
   <hr>
 
