Show links in comments

--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -70,7 +70,7 @@
     <hr>
 
     <p>
-      <tc-line-breaks display-feature="false" content="ctrl.feature.description"></tc-line-breaks>
+      <tc-simple-text display-feature="false" content="ctrl.feature.description"></tc-simple-text>
     </p>
 
   </div>
