--- a/tests-cucumber-ui/app/views/tc-scenario-pie-chart.html
+++ b/tests-cucumber-ui/app/views/tc-scenario-pie-chart.html
@@ -1,7 +1,7 @@
 <!-- Pie char -->
 <tc-pie-chart
   data="$ctrl.series"
-  total="$ctrl.total"
+  total="$ctrl.stats.all.count"
   uib-popover-template="'scenarioProgessPopover.html'"
   popover-placement="bottom"
   popover-trigger="mouseenter"
@@ -13,11 +13,11 @@
 <script type="text/ng-template" id="scenarioProgessPopover.html">
 
   <ul class="list-unstyled">
-    <li><b>Total :</b> {{ $ctrl.stats.count }}</li>
-    <li><b>Succès :</b> {{ $ctrl.stats.passed }}</li>
-    <li><b>En attente :</b> {{ $ctrl.stats.pending }}</li>
-    <li><b>Échecs :</b> {{ $ctrl.stats.failed }}</li>
-    <li><b>Non joués :</b> {{ $ctrl.stats.notRun }}</li>
+    <li><b>Total :</b> {{ $ctrl.stats[$ctrl.kind].count }}</li>
+    <li><b>Succès :</b> {{ $ctrl.stats[$ctrl.kind].passed }}</li>
+    <li><b>En attente :</b> {{ $ctrl.stats[$ctrl.kind].pending }}</li>
+    <li><b>Échecs :</b> {{ $ctrl.stats[$ctrl.kind].failed }}</li>
+    <li><b>Non joués :</b> {{ $ctrl.stats[$ctrl.kind].notRun }}</li>
   </ul>
 
 </script>
