--- a/tests-cucumber-ui/app/views/test-run.html
+++ b/tests-cucumber-ui/app/views/test-run.html
@@ -12,6 +12,12 @@
     <code>{{ ctrl.testRun.id }}</code>
   </p>
 
+  <p ng-repeat="label in ctrl.testRun.labels">
+    <b>{{ label.name }} :</b>
+    <a ng-if="label.url" ng-href="{{ label.url }}">{{ label.value }}</a>
+    <span ng-if="!label.url">{{ label.value }}</span>
+  </p>
+
   <hr>
 
   <div class="btn-toolbar" role="toolbar">
@@ -164,23 +170,88 @@
 
   <!-- Edit test run modal window -->
   <script type="text/ng-template" id="updateTestRunForm.html">
-    <form>
+    <form name="editForm" ng-submit="editForm.$valid && updateCtrl.update()" novalidate>
+
       <div class="modal-header">
         <button type="button" class="close" ng-click="$dismiss()" aria-label="Fermer">
           <span aria-hidden="true">&times;</span>
         </button>
         <h4 class="modal-title">Modifier les informations du tir</h4>
       </div>
+
       <div class="modal-body">
-        <div class="form-group">
+
+        <div class="form-group" ng-class="editForm.type.$invalid && 'has-error'">
           <label for="type">Type</label>
-          <input type="text" class="form-control" id="type" ng-model="updateCtrl.updateRequest.type" autofocus>
+          <input name="type" type="text" class="form-control" id="type" ng-model="updateCtrl.updateRequest.type"
+                 required autofocus>
         </div>
+
+        <div class="form-group">
+
+          <label>Étiquettes</label>
+
+          <table class="table">
+            <thead>
+            <tr>
+              <th class="col-md-4">Nom</th>
+              <th class="col-md-4">Valeur</th>
+              <th class="col-md-4">URL</th>
+              <th>&nbsp;</th>
+            </tr>
+            </thead>
+            <tbody>
+
+            <!-- Labels -->
+            <tr ng-repeat="label in updateCtrl.updateRequest.labels" ng-form="labelForm">
+
+              <td ng-class="labelForm.name.$invalid && 'has-error'">
+                <input name="name" ng-model="label.name" class="form-control input-sm" required>
+              </td>
+              <td ng-class="labelForm.value.$invalid && 'has-error'">
+                <input name="value" ng-model="label.value" class="form-control input-sm" required>
+              </td>
+              <td ng-class="labelForm.url.$invalid && 'has-error'">
+                <input name="url" type="url" ng-model="label.url" class="form-control input-sm">
+              </td>
+              <td>
+                <button type="button" class="btn btn-sm btn-danger"
+                        uib-tooltip="Supprimer" tooltip-placement="right"
+                        ng-click="updateCtrl.deleteLabel($index)">
+                  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                </button>
+              </td>
+
+            </tr>
+
+            <tr>
+              <td colspan="4">
+                <button type="button" class="btn btn-sm btn-default"
+                        uib-tooltip="Ajouter" tooltip-placement="right"
+                        ng-disabled="newLabelForm.url.$invalid"
+                        ng-click="updateCtrl.addNewLabel()">
+                  <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+                  Ajouter une étiquette
+                </button>
+              </td>
+            </tr>
+
+            </tbody>
+          </table>
+
+          <p>
+
+          </p>
+
+        </div>
+
       </div>
+
       <div class="modal-footer">
         <button type="button" class="btn btn-default" ng-click="$dismiss()">Annuler</button>
-        <button type="submit" class="btn btn-primary" ng-click="updateCtrl.update()">Modifier</button>
+        <button type="submit" class="btn btn-primary" ng-disabled="editForm.$invalid">Modifier</button>
       </div>
+
     </form>
   </script>
 
